[package]
name = "api-rate-limiting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-governor = "=0.4.1"
env_logger = "0.10"
once_cell = "1.18"
serde = { version = "1.0.177", features = ["derive"] }
